# strawberry-wagtail

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
example/: Dockerfile  manage.py  pyproject.toml
example/example/: settings.py  urls.py  wsgi.py
example/example/settings/: base.py  dev.py  production.py
example/example/templates/: base.html
example/home/: models.py
example/home/migrations/: 0003_homepage_body.py  0004_alter_homepage_body.py  0005_alter_homepage_body_blogpage.py
example/search/: views.py
strawberry_wagtail/: apps.py  resolvers.py  scalars.py  schema.py  stream_field.py  utils.py  views.py
tests/: django_settings.py  test_type_generation.py  test_view.py  urls.py
tests/my_app/: models.py
