[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7,<4.0"
dependencies = [
    "strawberry-graphql<1.0.0,>=0.103.1",
    "strawberry-graphql-django<1.0.0,>=0.2.5",
    "backports-cached-property>=1.0.2",
]
description = ""
name = "strawberry-wagtail"
version = "0.1.0"
# include = ["strawberry_wagtail/py.typed"]

[project.urls]

[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.1.0",
    "flake8<5.0.0,>=4.0.1",
    "mypy<1.0,>=0.941",
    "pytest<8.0.0,>=7.1.1",
    "pytest-django<5.0.0,>=4.5.2",
    "wagtail<3.0.0,>=2.16.1",
]

[tool.pdm.build]
includes = ["strawberry_wagtail", "strawberry_wagtail/py.typed"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
addopts = "--no-migrations"
pythonpath = "."
testpaths = ["tests"]
xfail_strict = true

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = true
combine_star = true
indent = 4
known_django = ["django"]
known_first_party = ["strawberry"]
known_graphql = ["graphql"]
known_pytest = ["pytest"]
lines_after_imports = 2
profile = "black"
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "GRAPHQL", "FIRSTPARTY", "LOCALFOLDER"]
src_paths = ["strawberry", "tests", "scripts"]

[tool.pyright]
exclude = ["**/__pycache__"]
include = ["strawberry"]
pythonVersion = "3.7"
reportMissingImports = true
reportMissingTypeStubs = false
stubPath = ""
