[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "black<23.0.0,>=22.1.0",
  "mypy<1.0,>=0.941",
]

[tool.pdm.build]
includes = []
[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
  "wagtail<5.0.0,>=4.1.0",
  "strawberry-wagtail @ file:///${PROJECT_ROOT}/..",
]
description = ""
dynamic = ["dependencies"]
license = {text = "MIT"}
name = "strawberry-wagtail-example"
requires-python = ">=3.10,<4.0"
version = "0.1.0"

[project.urls]
